--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -38,7 +38,7 @@
 
   {{ if .Params.twitterImg }}
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://stanyuzu.netlify.app/images/{{ .Params.twitterImg }}" >
+  <meta name="twitter:image" content="https://stanyuzu.netlify.app/{{ .Params.twitterImg }}" >
   {{ else }}
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="https://stanyuzu.netlify.app/{{ .Site.Params.logo.url }}" >
