--- a/themes/hugo-tanka/layouts/partials/header.html
+++ b/themes/hugo-tanka/layouts/partials/header.html
@@ -37,8 +37,9 @@
 <meta property="og:type" content="article">
 
   {{ if .Params.twitterImg }}
-  <meta name="twitter:card" content="summary_large_image">
   <meta property="og:image" content="https://stanyuzu.netlify.app/{{ .Params.twitterImg }}" >
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://stanyuzu.netlify.app/{{ .Params.twitterImg }}" >
   {{ else }}
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="https://stanyuzu.netlify.app/{{ .Site.Params.logo.url }}" >
