--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,7 +22,7 @@ html {
 /* link */
 
 a {
-    color: #333333;
+    color: #ffe4cc;
     text-decoration: underline;
     background-color: transparent;
 }
