--- a/themes/hugo-tanka/static/css/custom.css
+++ b/themes/hugo-tanka/static/css/custom.css
@@ -1,10 +1,6 @@
 /* Global styles */
 
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-feature-settings: "liga", "kern";
-    background-color: #fff;
-}
+
 
 /* Fix jumping scrollbar when switching to long pages */
 
@@ -57,6 +53,7 @@ hr {
 
 .header a:hover {
     background-color: lemonchiffon;
+    color: darkgoldenrod;
 }
 
 .header h1.name {
@@ -77,6 +74,7 @@ hr {
 
 .content h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
+    font-family: "Charter";
     color: #333333;
     margin-bottom: 1rem;
 }
