--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -4,7 +4,7 @@
         url('fonts/MyriadPro-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
         url('fonts/MyriadPro-SemiboldIt.ttf') format('truetype');
     font-weight: 600;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
         url('fonts/MyriadPro-BoldIt.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
         url('fonts/MyriadPro-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -40,7 +40,7 @@
         url('fonts/MyriadPro-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -49,7 +49,7 @@
         url('fonts/MyriadPro-CondIt.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -58,7 +58,7 @@
         url('fonts/MyriadPro-Cond.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -67,7 +67,7 @@
         url('fonts/MyriadPro-Semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -76,7 +76,7 @@
         url('fonts/MyriadPro-BoldCondIt.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -85,7 +85,7 @@
         url('fonts/MyriadPro-BoldCond.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -94,7 +94,7 @@
         url('fonts/MyriadPro-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -103,7 +103,7 @@
         url('fonts/Charter-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -112,7 +112,7 @@
         url('fonts/Charter-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -121,7 +121,7 @@
         url('fonts/Charter-Roman.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -130,7 +130,7 @@
         url('fonts/Charter-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -139,7 +139,7 @@
         url('fonts/Charter-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -148,7 +148,7 @@
         url('fonts/Charter-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 @font-face {
     font-family: 'Vollkorn';
@@ -156,7 +156,7 @@
         url('fonts/Vollkorn-BlackItalic.woff2') format('woff2');
     font-weight: 900;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -165,7 +165,7 @@
         url('fonts/Vollkorn-Black.woff2') format('woff2');
     font-weight: 900;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -174,7 +174,7 @@
         url('fonts/Vollkorn-ExtraBoldItalic.woff2') format('woff2');
     font-weight: bold;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -183,7 +183,7 @@
         url('fonts/Vollkorn-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -192,7 +192,7 @@
         url('fonts/Vollkorn-BoldItalic.woff2') format('woff2');
     font-weight: bold;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -201,7 +201,7 @@
         url('fonts/Vollkorn-ExtraBold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -210,7 +210,7 @@
         url('fonts/Vollkorn-Italic.woff2') format('woff2');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -219,7 +219,7 @@
         url('fonts/Vollkorn-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -228,7 +228,7 @@
         url('fonts/Vollkorn-MediumItalic.woff2') format('woff2');
     font-weight: 500;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -237,7 +237,7 @@
         url('fonts/Vollkorn-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -246,7 +246,7 @@
         url('fonts/Vollkorn-SemiBold.woff2') format('woff2');
     font-weight: 600;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 @font-face {
@@ -255,7 +255,7 @@
         url('fonts/Vollkorn-SemiBoldItalic.woff2') format('woff2');
     font-weight: 600;
     font-style: italic;
-    font-display: swap;
+    font-display: block;
 }
 
 
