--- a/themes/hugo-tanka/static/css/custom.css
+++ b/themes/hugo-tanka/static/css/custom.css
@@ -76,7 +76,7 @@ hr {
 
 .content h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
-    font-family: "Charter";
+    font-family: "Charter", "Vollkorn";
     color: #333333;
     margin-bottom: 1rem;
 }
